--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </div>
 
         <div class="image">
-            <img src="/style/port.jpg" alt="">
+            <img src="port.jpg" alt="">
 
         </div>
     </div>
